src/objects/ADvendio__EventDate__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__AdPrice__c</fullName>
        <label>Ad Price</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ADvendio__Ad_price__c.ADvendio__Exclusive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ADvendio__Ad_price__c</referenceTo>
        <relationshipLabel>Event Dates</relationshipLabel>
        <relationshipName>EventDates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Description__c</fullName>
        <description>This description will be shown in the Booking Calender if you place the mouse over the event.</description>
        <inlineHelpText>Please enter a description for the Event. This description will be shown in the Booking Calender if you place the mouse over the event.</inlineHelpText>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__PublicationDate__c</fullName>
        <label>Publication Date</label>
        <referenceTo>ADvendio__PublicationDate__c</referenceTo>
        <relationshipLabel>Event Dates</relationshipLabel>
        <relationshipName>EventDates</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Type__c</fullName>
        <inlineHelpText>Please choose whether you like to promote an event or block out dates within the booking calendar.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unavailable</fullName>
                    <default>true</default>
                    <label>Unavailable</label>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>EventDate</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__AdPrice__c</columns>
        <columns>ADvendio__Description__c</columns>
        <columns>ADvendio__PublicationDate__c</columns>
        <columns>ADvendio__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EVD-{0000}</displayFormat>
        <label>Event Date Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>